testing/tests/melt/negative/duplicate_anon_struct_field.c
struct foo {
    struct {
        int x;
    };
    struct {
        int x;
    };
};